--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.4",
+    "braintree-web-drop-in-react": "^1.2.1",
+    "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
